// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transition renders show without crashing 1`] = `
<Transition
  show={true}
>
  <Transition
    appear={true}
    enter={true}
    exit={true}
    in={true}
    mountOnEnter={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={300}
    unmountOnExit={true}
  >
    <span
      key="0/.0"
      style={
        Object {
          "transition": "all 300ms ease-in-out",
          "transitionProperty": "all",
        }
      }
    >
      show me
    </span>
  </Transition>
</Transition>
`;

exports[`Transition renders without show without crashing 1`] = `
<Transition
  show={false}
>
  <Transition
    appear={true}
    enter={true}
    exit={true}
    in={false}
    mountOnEnter={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={300}
    unmountOnExit={true}
  />
</Transition>
`;
